--- a/projects/icc/fields/src/field-errors/field-errors.component.html
+++ b/projects/icc/fields/src/field-errors/field-errors.component.html
@@ -1,38 +1,46 @@
 @for (error of errors; track error; let index = $index) {
-  <ng-container [ngSwitch]="error.type">
-    <icc-error *ngSwitchDefault>
-      <icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
-      {{ error.message }}
-    </icc-error>
-
-    <icc-error *ngSwitchCase="'required'">
-      <icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
-      {{ "ICC.UI.FIELDS.ERRORS.FIELD_IS_REQUIRED" | translate }}
-    </icc-error>
-
-    <icc-error *ngSwitchCase="'minlength'">
-      <icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
-      {{ "ICC.UI.FIELDS.ERRORS.MIN_LENGTH" | translate: { length: error.requiredLength } }}
-    </icc-error>
-
-    <icc-error *ngSwitchCase="'maxlength'">
-      <icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
-      {{ "ICC.UI.FIELDS.ERRORS.MAX_LENGTH" | translate: { length: error.requiredLength } }}
-    </icc-error>
-
-    <icc-error *ngSwitchCase="'min'">
-      <icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
-      {{ "ICC.UI.FIELDS.ERRORS.MIN_VALUE" | translate: { value: error.min } }}
-    </icc-error>
-
-    <icc-error *ngSwitchCase="'max'">
-      <icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
-      {{ "ICC.UI.FIELDS.ERRORS.MAX_VALUE" | translate: { value: error.max } }}
-    </icc-error>
-
-    <icc-error *ngSwitchCase="'confirmationPassword'">
-      <icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
-      {{ "ICC.UI.FIELDS.ERRORS.NOT_MATCH" | translate }}
-    </icc-error>
-  </ng-container>
+  @switch (error.type) {
+    @case ("required") {
+      <icc-error
+        ><icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
+        {{ "ICC.UI.FIELDS.ERRORS.FIELD_IS_REQUIRED" | translate }}
+      </icc-error>
+    }
+    @case ("minlength") {
+      <icc-error
+        ><icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
+        {{ "ICC.UI.FIELDS.ERRORS.MIN_LENGTH" | translate: { length: error.requiredLength } }}
+      </icc-error>
+    }
+    @case ("maxlength") {
+      <icc-error
+        ><icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
+        {{ "ICC.UI.FIELDS.ERRORS.MAX_LENGTH" | translate: { length: error.requiredLength } }}
+      </icc-error>
+    }
+    @case ("min") {
+      <icc-error
+        ><icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
+        {{ "ICC.UI.FIELDS.ERRORS.MIN_VALUE" | translate: { value: error.min } }}
+      </icc-error>
+    }
+    @case ("max") {
+      <icc-error
+        ><icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
+        {{ "ICC.UI.FIELDS.ERRORS.MAX_VALUE" | translate: { value: error.max } }}
+      </icc-error>
+    }
+    @case ("confirmationPassword") {
+      <icc-error
+        ><icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
+        {{ "ICC.UI.FIELDS.ERRORS.NOT_MATCH" | translate }}
+      </icc-error>
+    }
+    @default {
+      <icc-error
+        ><icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
+        {{ error.message }}
+      </icc-error>
+    }
+  }
 }
