--- a/projects/icc/fields/src/fields.component.html
+++ b/projects/icc/fields/src/fields.component.html
@@ -1,25 +1,41 @@
-@if (fieldConfig.fieldType === FieldType.Text) {
-  <icc-text-field [fieldConfig]="fieldConfig" [form]="form"></icc-text-field>
-} @else if (fieldConfig.fieldType === FieldType.Number) {
-  <icc-number-field [fieldConfig]="fieldConfig" [form]="form"></icc-number-field>
-} @else if (fieldConfig.fieldType === FieldType.Checkbox) {
-  <icc-checkbox-field [fieldConfig]="fieldConfig" [form]="form"></icc-checkbox-field>
-} @else if (fieldConfig.fieldType === FieldType.Date) {
-  <icc-date-field [fieldConfig]="fieldConfig" [form]="form"></icc-date-field>
-} @else if (fieldConfig.fieldType === FieldType.DateRange) {
-  <icc-date-range-field [fieldConfig]="fieldConfig" [form]="form"></icc-date-range-field>
-} @else if (fieldConfig.fieldType === FieldType.Display) {
-  <icc-display-field [fieldConfig]="fieldConfig" [form]="form"></icc-display-field>
-} @else if (fieldConfig.fieldType === FieldType.Hidden) {
-  <icc-hidden-field [fieldConfig]="fieldConfig" [form]="form"></icc-hidden-field>
-} @else if (fieldConfig.fieldType === FieldType.Password) {
-  <icc-password-field [fieldConfig]="fieldConfig" [form]="form"></icc-password-field>
-} @else if (fieldConfig.fieldType === FieldType.RadioGroup) {
-  <icc-radio-group-field [fieldConfig]="fieldConfig" [form]="form"></icc-radio-group-field>
-} @else if (fieldConfig.fieldType === FieldType.Select) {
-  <icc-select-field [fieldConfig]="fieldConfig" [form]="form"></icc-select-field>
-} @else if (fieldConfig.fieldType === FieldType.Textarea) {
-  <icc-textarea-field [fieldConfig]="fieldConfig" [form]="form"></icc-textarea-field>
-} @else if (fieldConfig.fieldType === FieldType.UploadFile) {
-  <icc-upload-file-field [fieldConfig]="fieldConfig" [form]="form"></icc-upload-file-field>
+@switch (fieldConfig.fieldType) {
+  @case (FieldType.Text) {
+    <icc-text-field [fieldConfig]="fieldConfig" [form]="form"></icc-text-field>
+  }
+  @case (FieldType.Number) {
+    <icc-number-field [fieldConfig]="fieldConfig" [form]="form"></icc-number-field>
+  }
+  @case (FieldType.Checkbox) {
+    <icc-checkbox-field [fieldConfig]="fieldConfig" [form]="form"></icc-checkbox-field>
+  }
+  @case (FieldType.Date) {
+    <icc-date-field [fieldConfig]="fieldConfig" [form]="form"></icc-date-field>
+  }
+  @case (FieldType.DateRange) {
+    <icc-date-range-field [fieldConfig]="fieldConfig" [form]="form"></icc-date-range-field>
+  }
+  @case (FieldType.Display) {
+    <icc-display-field [fieldConfig]="fieldConfig" [form]="form"></icc-display-field>
+  }
+  @case (FieldType.Hidden) {
+    <icc-hidden-field [fieldConfig]="fieldConfig" [form]="form"></icc-hidden-field>
+  }
+  @case (FieldType.Password) {
+    <icc-password-field [fieldConfig]="fieldConfig" [form]="form"></icc-password-field>
+  }
+  @case (FieldType.RadioGroup) {
+    <icc-radio-group-field [fieldConfig]="fieldConfig" [form]="form"></icc-radio-group-field>
+  }
+  @case (FieldType.Select) {
+    <icc-select-field [fieldConfig]="fieldConfig" [form]="form"></icc-select-field>
+  }
+  @case (FieldType.Textarea) {
+    <icc-textarea-field [fieldConfig]="fieldConfig" [form]="form"></icc-textarea-field>
+  }
+  @case (FieldType.UploadFile) {
+    <icc-upload-file-field [fieldConfig]="fieldConfig" [form]="form"></icc-upload-file-field>
+  }
+  @default {
+    <icc-text-field [fieldConfig]="fieldConfig" [form]="form"></icc-text-field>
+  }
 }
