--- a/projects/icc/fields/src/field-errors/field-errors.component.html
+++ b/projects/icc/fields/src/field-errors/field-errors.component.html
@@ -7,38 +7,38 @@
       </icc-error>
     }
     @case ("minlength") {
-      <icc-error
-        ><icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
+      <icc-error>
+        <icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
         {{ "ICC.UI.FIELDS.ERRORS.MIN_LENGTH" | translate: { length: error.requiredLength } }}
       </icc-error>
     }
     @case ("maxlength") {
-      <icc-error
-        ><icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
+      <icc-error>
+        <icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
         {{ "ICC.UI.FIELDS.ERRORS.MAX_LENGTH" | translate: { length: error.requiredLength } }}
       </icc-error>
     }
     @case ("min") {
-      <icc-error
-        ><icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
+      <icc-error>
+        <icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
         {{ "ICC.UI.FIELDS.ERRORS.MIN_VALUE" | translate: { value: error.min } }}
       </icc-error>
     }
     @case ("max") {
-      <icc-error
-        ><icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
+      <icc-error>
+        <icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
         {{ "ICC.UI.FIELDS.ERRORS.MAX_VALUE" | translate: { value: error.max } }}
       </icc-error>
     }
     @case ("confirmationPassword") {
-      <icc-error
-        ><icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
+      <icc-error>
+        <icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
         {{ "ICC.UI.FIELDS.ERRORS.NOT_MATCH" | translate }}
       </icc-error>
     }
     @default {
-      <icc-error
-        ><icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
+      <icc-error>
+        <icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
         {{ error.message }}
       </icc-error>
     }
