--- a/projects/icc/fields/src/select-field/select-field.component.html
+++ b/projects/icc/fields/src/select-field/select-field.component.html
@@ -9,9 +9,9 @@
         [iccFormFieldControl]="field"
         [showFieldEditIndicator]="showFieldEditIndicator"
       >
-        <icc-label *ngIf="fieldConfig.fieldLabel !== undefined">
-          {{ fieldConfig.fieldLabel | translate }}
-        </icc-label>
+        @if (fieldConfig.fieldLabel !== undefined) {
+          <icc-label>{{ fieldConfig.fieldLabel | translate }}</icc-label>
+        }
         <input
           iccInput
           #inputEl
@@ -27,19 +27,15 @@
           [required]="required"
           placeholder="{{ fieldConfig.placeholder! | translate }}"
         />
-        <icc-icon
-          *ngIf="fieldConfig.clearValue && hasValue"
-          icon="remove"
-          iccSuffix
-          (click)="clearSelected($event)"
-        ></icc-icon>
-        <icc-icon
-          *ngIf="!field.disabled"
-          icon="angle-down"
-          iccSuffix
-          [ngStyle]="{ display: isOverlayOpen ? 'none' : '' }"
-        ></icc-icon>
-        <icc-icon *ngIf="isOverlayOpen" icon="angle-up" iccSuffix (click)="closeOverlay()"></icc-icon>
+        @if (fieldConfig.clearValue && hasValue) {
+          <icc-icon icon="remove" iccSuffix (click)="clearSelected($event)"></icc-icon>
+        }
+        @if (!field.disabled) {
+          <icc-icon icon="angle-down" iccSuffix [ngStyle]="{ display: isOverlayOpen ? 'none' : '' }"></icc-icon>
+        }
+        @if (isOverlayOpen) {
+          <icc-icon icon="angle-up" iccSuffix (click)="closeOverlay()"></icc-icon>
+        }
         <icc-autocomplete
           #autocomplete="iccAutocomplete"
           [multiSelection]="fieldConfig.multiSelection"
@@ -48,36 +44,30 @@
         >
           <ng-template iccAutocompleteContent>
             <div *ngIf="hasHeader(fieldConfig)" class="icc-select-field-sticky-header">
-              <icc-option *ngIf="fieldConfig.multiSelection && fieldConfig.checkAll" (click)="checkAll(selectOptions)">
-                <icc-checkbox [checked]="isAllChecked">
-                  {{ "ICC.UI.ACTIONS.CHECK_ALL" | translate }}
-                </icc-checkbox>
-              </icc-option>
-              <icc-option *ngIf="fieldConfig.multiSelection && fieldConfig.uncheckAll" (click)="checkAll([])">
-                <icc-checkbox [checked]="!hasValue">
-                  {{ "ICC.UI.ACTIONS.UNCHECK_ALL" | translate }}
-                </icc-checkbox>
-              </icc-option>
-              <icc-option
-                *ngIf="fieldConfig.isEmpty"
-                [value]="isEmptyValue"
-                #refIsEmpty
-                (click)="headerOptionClick(refIsEmpty)"
-              >
-                <icc-checkbox [checked]="refIsEmpty.selected">
-                  {{ "ICC.UI.ACTIONS.IS_EMPTY" | translate }}
-                </icc-checkbox>
-              </icc-option>
-              <icc-option
-                *ngIf="fieldConfig.notEmpty"
-                [value]="notEmptyValue"
-                #refIsNotEmpty
-                (click)="headerOptionClick(refIsNotEmpty)"
-              >
-                <icc-checkbox [checked]="refIsNotEmpty.selected">
-                  {{ "ICC.UI.ACTIONS.NOT_EMPTY" | translate }}
-                </icc-checkbox>
-              </icc-option>
+              @if (fieldConfig.multiSelection && fieldConfig.checkAll) {
+                <icc-option (click)="checkAll(selectOptions)">
+                  <icc-checkbox [checked]="isAllChecked">{{ "ICC.UI.ACTIONS.CHECK_ALL" | translate }}</icc-checkbox>
+                </icc-option>
+              }
+              @if (fieldConfig.multiSelection && fieldConfig.uncheckAll) {
+                <icc-option (click)="checkAll([])">
+                  <icc-checkbox [checked]="!hasValue">{{ "ICC.UI.ACTIONS.UNCHECK_ALL" | translate }}</icc-checkbox>
+                </icc-option>
+              }
+              @if (fieldConfig.isEmpty) {
+                <icc-option #refIsEmpty [value]="isEmptyValue" (click)="headerOptionClick(refIsEmpty)">
+                  <icc-checkbox [checked]="refIsEmpty.selected">
+                    {{ "ICC.UI.ACTIONS.IS_EMPTY" | translate }}
+                  </icc-checkbox>
+                </icc-option>
+              }
+              @if (fieldConfig.notEmpty) {
+                <icc-option #refIsNotEmpty [value]="notEmptyValue" (click)="headerOptionClick(refIsNotEmpty)">
+                  <icc-checkbox [checked]="refIsNotEmpty.selected">
+                    {{ "ICC.UI.ACTIONS.NOT_EMPTY" | translate }}
+                  </icc-checkbox>
+                </icc-option>
+              }
             </div>
 
             <ng-container
@@ -112,16 +102,18 @@
                 </icc-option>
               </cdk-virtual-scroll-viewport>
 
-              <icc-option class="no-result" *ngIf="!result.length">{{
-                "ICC.UI.LIST.NO_RESULT" | translate
-              }}</icc-option>
+              @if (!result.length) {
+                <icc-option class="no-result">{{ "ICC.UI.LIST.NO_RESULT" | translate }}</icc-option>
+              }
             </ng-container>
           </ng-template>
         </icc-autocomplete>
 
-        <icc-form-field-errors *ngIf="(field?.touched || field?.dirty) && field?.errors">
-          <icc-field-errors [errors]="field!.errors!"></icc-field-errors>
-        </icc-form-field-errors>
+        @if (field && (field.touched || field.dirty) && field.errors) {
+          <icc-form-field-errors>
+            <icc-field-errors [errors]="field!.errors!"></icc-field-errors>
+          </icc-form-field-errors>
+        }
       </icc-form-field>
     </ng-container>
   </ng-container>
