--- a/projects/icc/form/src/components/form-view.component.html
+++ b/projects/icc/form/src/components/form-view.component.html
@@ -12,11 +12,11 @@
 </icc-layout-header>
 
 <form [formGroup]="form" [iccFormLabelWidth]="formConfig.labelWidth">
-  @for (fieldConfig of formFields; track fieldConfig; let index = $index) {
+  <ng-container *ngFor="let fieldConfig of formFields; trackBy: trackByIndex; let index = index">
     @if (fieldConfig.fieldType === FieldType.Fieldset) {
       <icc-fieldset [form]="form" [fieldConfig]="fieldConfig"></icc-fieldset>
     } @else {
       <icc-fields [form]="form" [fieldConfig]="fieldConfig"></icc-fields>
     }
-  }
+  </ng-container>
 </form>
