refactore select option

--- a/projects/icc/fields/src/select-field/select-field.component.html
+++ b/projects/icc/fields/src/select-field/select-field.component.html
@@ -45,14 +45,14 @@
           [compareWith]="compareFn.bind(this)"
         >
           <ng-template iccAutocompleteContent>
-            <icc-select-view
+            <icc-select-option
               [fieldConfig]="fieldConfig"
               [form]="form"
               [fieldName]="fieldName"
               [selectOptions]="selectOptions"
               [value]="value"
             >
-            </icc-select-view>
+            </icc-select-option>
           </ng-template>
         </icc-autocomplete>
 
