--- a/projects/icc/fields/src/select-field/select-field.component.html
+++ b/projects/icc/fields/src/select-field/select-field.component.html
@@ -47,6 +47,7 @@
           <ng-template iccAutocompleteContent>
             <icc-select-option
               [fieldConfig]="fieldConfig"
+              [autocomplete]="autocompleteComponent"
               [form]="form"
               [fieldName]="fieldName"
               [selectOptions]="selectOptions"
