--- a/projects/icc/fields/src/select-field/select-field.component.html
+++ b/projects/icc/fields/src/select-field/select-field.component.html
@@ -49,6 +49,7 @@
               [fieldConfig]="fieldConfig"
               [autocomplete]="autocompleteComponent"
               [setSelected]="setSelected"
+              [selectFilter]="field.value"
               [form]="form"
               [fieldName]="fieldName"
               [selectOptions]="selectOptions"
