--- a/projects/icc/fields/src/select-field/select-field.component.html
+++ b/projects/icc/fields/src/select-field/select-field.component.html
@@ -56,6 +56,7 @@
               [value]="value"
               (clickedOption)="onClickedOption($event)"
               (autocompleteClose)="onAutocompleteClose($event)"
+              (valueChange)="onSelectOptionValueChange($event)"
             >
             </icc-select-option>
           </ng-template>
