--- a/projects/icc/accordion/src/accordion.component.html
+++ b/projects/icc/accordion/src/accordion.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngFor="let item of items; trackBy: trackByIndex; let index = index">
+@for (item of items; track $index; let index = $index) {
   <icc-layout [ngStyle]="{ flex: getHeaderStyle(item) }">
     <icc-layout-header
       [ngClass]="item.expanded ? 'icc-accordion-item-expanded' : ''"
@@ -18,4 +18,4 @@
       </icc-layout-horizontal>
     }
   </icc-layout>
-</ng-container>
+}
