--- a/projects/icc/fields/src/select-field/select-field.component.html
+++ b/projects/icc/fields/src/select-field/select-field.component.html
@@ -20,7 +20,7 @@
           [readonly]="!!fieldConfig.selectOnly"
           [formControlName]="fieldName!"
           (isOverlayOpen)="overlayOpen($event)"
-          (change)="onChange($event)"
+          (change)="onChange()"
           [iccAutocomplete]="autocomplete"
           [iccAutocompleteClose]="autocompleteClose"
           [iccAutocompleteClickOption]="clickedOption"
