--- a/projects/icc/grid/src/components/grid-header/grid-group-header/grid-group-header.component.scss
+++ b/projects/icc/grid/src/components/grid-header/grid-group-header/grid-group-header.component.scss
@@ -6,6 +6,6 @@
     padding: 0 10px;
     border-bottom-width: 0px;
     flex-direction: row;
-    justify-content: center; // start | center | end
+    justify-content: center;
   }
 }
