--- a/projects/icc/grid/src/components/grid-header/grid-header.component.html
+++ b/projects/icc/grid/src/components/grid-header/grid-header.component.html
@@ -16,7 +16,7 @@
   <div
     *ngIf="gridConfig.columnFilter"
     class="icc-header-no-filter-border"
-    [ngStyle]="{ height: gridConfig.headerHeight + 'px' }"
+    [ngStyle]="{ height: filterRowHeight }"
   ></div>
 </icc-grid-header-item>
 
@@ -52,7 +52,7 @@
     </icc-column-filter>
     <div
       class="icc-header-no-filter-border"
-      [ngStyle]="{ height: gridConfig.headerHeight + 'px' }"
+      [ngStyle]="{ height: filterRowHeight }"
       *ngIf="gridConfig.columnFilter && column.filterField === false"
     ></div>
 
