select display with function

--- a/projects/icc-demo/src/app/views/select/demos/string-array/string-array.component.html
+++ b/projects/icc-demo/src/app/views/select/demos/string-array/string-array.component.html
@@ -11,4 +11,10 @@
     [value]="multiListStates"
     [options]="listStates"
   ></icc-select-field>
+
+  <icc-select-field
+    [fieldConfig]="multiSelectionDisplay"
+    [value]="multiListStatesDisplay"
+    [options]="listStates"
+  ></icc-select-field>
 </div>
