--- a/projects/icc-demo/src/app/views/select/demos/simple-select/simple-select.component.html
+++ b/projects/icc-demo/src/app/views/select/demos/simple-select/simple-select.component.html
@@ -2,9 +2,17 @@
   <div><br /></div>
 
   <div>
-    No fieldConfig - use default field config with Local field config and local object options
-    <icc-select-field [options]="listDefaultStates" [value]="defaultStateValue"></icc-select-field>
-    <icc-select-field [options]="listStates" [value]="singleListState2"></icc-select-field>
+    use default field config with Local field config and local object options
+    <icc-select-field
+      [fieldConfig]="defaultSelection"
+      [options]="listDefaultStates"
+      [value]="defaultStateValue"
+    ></icc-select-field>
+    <icc-select-field
+      [fieldConfig]="defaultSelection"
+      [options]="listStates"
+      [value]="singleListState2"
+    ></icc-select-field>
   </div>
   <div><br /></div>
   <div>
