singleListOption as setting

--- a/projects/icc/fields/src/select-field/select-field.component.html
+++ b/projects/icc/fields/src/select-field/select-field.component.html
@@ -45,6 +45,7 @@
           <ng-template iccAutocompleteContent>
             <icc-select-option
               [fieldConfig]="fieldConfig"
+              [fieldSetting]="fieldSetting"
               [autocomplete]="autocompleteComponent"
               [setSelected]="setSelected"
               [selectFilter]="field.value"
