--- a/projects/icc/fields/src/select-field/components/select-option.component.html
+++ b/projects/icc/fields/src/select-field/components/select-option.component.html
@@ -26,7 +26,7 @@
 </div>
 
 <ng-container
-  *ngIf="selectOptions | selectFilter: selectFilter : fieldConfig.optionLabel : fieldConfig.singleListOption as result"
+  *ngIf="selectOptions | selectFilter: selectFilter : fieldConfig.optionLabel : fieldSetting.singleListOption as result"
 >
   <cdk-virtual-scroll-viewport
     class="icc-select-virtual-scroll"
@@ -44,7 +44,7 @@
         <icc-checkbox [checked]="ref.selected">
           <icc-filter-highlight [value]="getOptionLabel(option)" [filterValue]="filterValue"> </icc-filter-highlight>
         </icc-checkbox>
-      } @else if (fieldConfig.singleListOption && fieldConfig.selectOnly) {
+      } @else if (fieldSetting.singleListOption && fieldConfig.selectOnly) {
         <ng-container>{{ option }}</ng-container>
       } @else {
         <icc-filter-highlight [value]="getOptionLabel(option)" [filterValue]="filterValue"> </icc-filter-highlight>
