--- a/projects/icc/accordion/src/accordion.component.scss
+++ b/projects/icc/accordion/src/accordion.component.scss
@@ -2,21 +2,16 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  overflow-y: hidden;
 
   icc-layout-header {
-    justify-content: flex-start;
     margin-bottom: 0px;
-    white-space: nowrap;
-    overflow-x: hidden;
-    /*
-    div {
-      justify-content: flex-start;
-    text-overflow: ellipsis;
-    overflow-x: hidden;
-    white-space: nowrap;
+
+    ::ng-deep .icc-layout-header-title {
+      display: inline-block;
+      overflow-x: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
     }
-    */
   }
 
   icc-layout-horizontal {
