--- a/projects/icc/menu/src/cdk-menus.component.scss
+++ b/projects/icc/menu/src/cdk-menus.component.scss
@@ -2,10 +2,18 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  min-width: 120px;
+  //min-width: 120px;
+
+  ::ng-deep .icc-suffix-content {
+    //min-width: 120px;
+    max-width: 150px;
+    text-overflow: ellipsis;
+    overflow-x: hidden;
+    white-space: nowrap;
+  }
 }
 
 .icc-menus-sub-level {
   width: 100%;
-  min-width: 120px;
+  //min-width: 120px;
 }
