--- a/projects/icc/form-field/src/form-field.component.scss
+++ b/projects/icc/form-field/src/form-field.component.scss
@@ -89,7 +89,7 @@
     height: 3px;
     width: 3px;
     border-radius: 50%;
-    transform: translateY(-3px);
+    transform: translate(-3px, -3px);
   }
 
   .icc-form-field-hint,
