--- a/projects/icc/form-field/src/form-field.component.scss
+++ b/projects/icc/form-field/src/form-field.component.scss
@@ -1,7 +1,6 @@
 :host {
   .icc-form-field {
     line-height: 1.75rem; // TODO form field height variable
-    padding: 1px 0 1px 5px;
     position: relative;
 
     ::ng-deep input {
@@ -13,6 +12,7 @@
   .icc-form-field-flex {
     display: flex;
     width: 100%;
+    padding: 1px 0 1px 5px;
   }
 
   .icc-form-field-wrapper {
@@ -53,6 +53,7 @@
   }*/
 
   .icc-form-field-infix {
+    width: 100%;
     flex: 1;
     min-width: 0;
     overflow: hidden;
