--- a/projects/icc/grid/src/components/grid-header/grid-header-cell/grid-header-cell.component.scss
+++ b/projects/icc/grid/src/components/grid-header/grid-header-cell/grid-header-cell.component.scss
@@ -31,7 +31,7 @@
   }
 
   .grid-header-cell-menu {
-    margin-left: auto !important;
+    margin-left: auto;
     cursor: default;
     icc-icon {
       width: 20px;
