--- a/projects/icc/dashboard/src/dashboard.component.html
+++ b/projects/icc/dashboard/src/dashboard.component.html
@@ -16,20 +16,22 @@
       *ngFor="let tile of tiles; let i = index"
       [ngStyle]="{ 'grid-column': tile.gridColumn, 'grid-row': tile.gridRow }"
     >
-      <cdk-drop-list
-        class="icc-drag-tile"
-        [cdkDropListData]="i"
-        cdkDragHandle
-        (cdkDropListDropped)="onDropListDropped($event, tile)"
-      >
+      <cdk-drop-list class="icc-drag-tile" [cdkDropListData]="i" (cdkDropListDropped)="onDropListDropped($event, tile)">
         <div
           class="icc-drag-tile"
           [style.backgroundColor]="tile.color"
-          (dblclick)="onDblClick($event, tile)"
           cdkDrag
           [cdkDragDisabled]="isDragDisabled(tile)"
           [cdkDragData]="i"
         >
+          <div cdkDragHandle>
+            <svg width="24px" fill="currentColor" viewBox="0 0 24 24">
+              <path
+                d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z"
+              ></path>
+              <path d="M0 0h24v24H0z" fill="none"></path>
+            </svg>
+          </div>
           <icc-portal [content]="tile.content!" [context]="tile.context!"></icc-portal>
         </div>
       </cdk-drop-list>
