dashboard tile drag

--- a/projects/icc/dashboard/src/dashboard.component.html
+++ b/projects/icc/dashboard/src/dashboard.component.html
@@ -27,7 +27,7 @@
           <div
             cdkDragHandle
             [iccPopover]="tilemenu"
-            [iccPopoverTrigger]="contextMenuTrigger"
+            [iccPopoverTrigger]="getContextMenuTrigger(tile)"
             [clickToClose]="true"
             [iccPopoverPosition]="position"
           >
