--- a/projects/icc/grid/src/components/grid-header/grid-header-cell/grid-header-cell.component.scss
+++ b/projects/icc/grid/src/components/grid-header/grid-header-cell/grid-header-cell.component.scss
@@ -3,6 +3,7 @@
   width: 100%;
   padding-left: 10px;
   align-items: center;
+  cursor: move; // TODO drag disaled use default cursor
 
   .grid-header-cell {
     display: flex;
