dashboard tile drag

--- a/projects/icc/dashboard/src/dashboard.component.html
+++ b/projects/icc/dashboard/src/dashboard.component.html
@@ -25,6 +25,7 @@
           [cdkDragData]="i"
         >
           <div
+            class="icc-drag-handle"
             cdkDragHandle
             [iccPopover]="tilemenu"
             [iccPopoverTrigger]="getContextMenuTrigger(tile)"
