tile mapping key

--- a/projects/icc-demo/src/app/views/dashboard/demos/dashboard-demo/dashboard-demo.component.html
+++ b/projects/icc-demo/src/app/views/dashboard/demos/dashboard-demo/dashboard-demo.component.html
@@ -1,1 +1,1 @@
-<icc-dashboard class="icc-dashboard" [tiles]="tiles"> </icc-dashboard>
+<icc-dashboard class="icc-dashboard" [tileOptions]="tileOptions" [tiles]="tiles"> </icc-dashboard>
