grid column dragable

--- a/projects/icc/grid/src/components/grid-header/grid-header-cell/grid-header-cell.component.scss
+++ b/projects/icc/grid/src/components/grid-header/grid-header-cell/grid-header-cell.component.scss
@@ -3,7 +3,10 @@
   width: 100%;
   padding-left: 10px;
   align-items: center;
-  cursor: move; // TODO drag disaled use default cursor
+
+  &.draggable {
+    cursor: move;
+  }
 
   .grid-header-cell {
     display: flex;
