--- a/projects/icc-demo/src/app/views/tabs/tabs.component.html
+++ b/projects/icc-demo/src/app/views/tabs/tabs.component.html
@@ -1,10 +1,14 @@
 <icc-layout-horizontal [resizeable]="true">
   <icc-layout-left>
-    <icc-accordion [items]="items"></icc-accordion>
+    <icc-accordion [items]="items" (iccMenuItemClick)="onMenuItemClick($event)"></icc-accordion>
   </icc-layout-left>
 
   <icc-layout-center>
-    <router-outlet></router-outlet>
+    @if (useRouterLink) {
+      <router-outlet></router-outlet>
+    } @else {
+      <icc-tabs [tabs]="tabs" [tabsConfig]="tabsConfig" [selectedTabIndex]="selectedTabIndex"> </icc-tabs>
+    }
   </icc-layout-center>
 
   <icc-layout-right><div>Right Container</div></icc-layout-right>
