--- a/projects/icc-demo/src/app/views/tabs/tabs.component.html
+++ b/projects/icc-demo/src/app/views/tabs/tabs.component.html
@@ -7,13 +7,7 @@
     @if (useRouterLink) {
       <router-outlet></router-outlet>
     } @else {
-      <icc-tabs
-        [tabs]="tabs"
-        [tabsConfig]="tabsConfig"
-        [selectedTabIndex]="selectedTabIndex"
-        (iccTabsChange)="onTabsChange($event)"
-      >
-      </icc-tabs>
+      <icc-tabs [tabs]="tabs" [tabsConfig]="tabsConfig" (iccTabsChange)="onTabsChange($event)"> </icc-tabs>
     }
   </icc-layout-center>
 
