--- a/projects/icc-demo/src/app/views/tabs/tabs.component.html
+++ b/projects/icc-demo/src/app/views/tabs/tabs.component.html
@@ -7,7 +7,7 @@
     @if (useRouterLink) {
       <router-outlet></router-outlet>
     } @else {
-      <icc-tabs [tabsConfig]="tabsConfig" [tabs]="tabs" [tabOptions]="tabOptions"> </icc-tabs>
+      <icc-tabs [tabsConfig]="tabsConfig" [tabs]="tabs" [options]="options"> </icc-tabs>
     }
   </icc-layout-center>
 
