--- a/projects/icc/tabs/src/components/tabs-tab.component.html
+++ b/projects/icc/tabs/src/components/tabs-tab.component.html
@@ -19,7 +19,7 @@
     [items]="menuItem"
     [level]="1"
     [disabled]="getDisabled(tab)"
-    (iccMenuItemClick)="onMenuItemClicked($event, tab)"
+    (iccMenuItemClick)="onContextMenuClicked($event, tab)"
   >
   </icc-menus>
 </ng-template>
