--- a/projects/icc-demo/src/app/views/tabs/demos/tab-group.component.html
+++ b/projects/icc-demo/src/app/views/tabs/demos/tab-group.component.html
@@ -19,7 +19,7 @@
         <input type="text" matInput formControlName="field1" />
       </fieldset>
     </mat-tab>
-    <mat-tab label="Second"
+    <mat-tab label="Second" [disabled]="true"
       >Content 2
       <fieldset [formGroup]="formGroup">
         <legend>field Set 2</legend>
