--- a/projects/icc/tabs/src/components/tab-group/tab-group.component.scss
+++ b/projects/icc/tabs/src/components/tab-group/tab-group.component.scss
@@ -13,6 +13,10 @@
     white-space: nowrap;
   }
 
+  .icc-mdc-tab-disabled {
+    opacity: 0.5;
+  }
+
   ::ng-deep .icc-mdc-tab-body-active {
     display: flex;
     width: 100%;
